--- a/src/components/styles/CreateForm .css
+++ b/src/components/styles/CreateForm .css
@@ -3,20 +3,31 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgb(0, 145, 255);
+    background-color: rgb(151, 208, 252);
 }
 .formContent{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .formTable{
     display: flex;
     flex-direction: column;
     padding: 10px;
+    gap: 10px;
+    background-color: rgba(255, 255, 255, 0.554);
+    border-radius: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .record{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.error{
+    color: red;
+    font-size: 15px;
+    font-weight: 600;
 }
